--- a/admin.html
+++ b/admin.html
@@ -1,164 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Admin Dashboard</title>
-  <link rel="stylesheet" href="admin.css">
+  <link rel="stylesheet" href="admin.css" />
+  <style>
+    /* small helpful styles so modal and tables render even if admin.css differs */
+    .upload-form input, .upload-form textarea, .upload-form select { width:100%; padding:8px; margin:6px 0; box-sizing:border-box; }
+    table { width:100%; border-collapse:collapse; }
+    table td, table th { padding:8px; border:1px solid #eee; text-align:left; }
+    .modal { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.6); justify-content:center; align-items:center; padding:1rem; }
+    .modal-content{ background:#fff; padding:1rem; max-width:520px; width:100%; border-radius:8px; }
+  </style>
 </head>
 <body>
-  <!--------NAVIGATION BAR--------------->
   <nav>
-    <!------LEFT NAV---->
-    <div class="left">
-      <h2>Admin Dashboard</h2>
-    </div>
-    <!----RIGHT NAV----->
+    <div class="left"><h2>Admin Dashboard</h2></div>
     <div class="right">
-      <span class="gh-flag">GH <img src="./images/flag2.jpg" alt=""></span>
-
-      <div class="hamburger" id="toggler">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
+      <span class="gh-flag">GH <img src="./images/flag2.jpg" alt="" style="height:18px"></span>
+      <div class="hamburger" id="toggler"><span></span><span></span><span></span></div>
     </div>
   </nav>
 
-<!------------MAIN--CONTAINER------------------->
-<div class="sidebar">
-  <h3>Admin Panel</h3>
+  <div class="sidebar">
+    <h3>Admin Panel</h3>
+    <p>Categories</p>
+    <button onclick="showForm('men')">Men's Fashion</button>
+    <button onclick="showForm('women')">Women's Fashion</button>
+    <button onclick="showForm('kids')">Kid's Fashion</button>
+    <button onclick="showForm('muslim')">Muslim's Section</button>
+    <button onclick="showForm('health_beauty')">Health & Beauty</button>
+    <button onclick="showForm('accessories')">Accessories</button>
+    <button onclick="showForm('home_kitchen')">Home & Kitchen</button>
+    <button onclick="showForm('baby_toddler')">Baby & Toddler</button>
 
-  <p>Categories</p>
-  <!-- Your categories added here -->
-  <button onclick="showForm('men')">Men's Fashion</button>
-  <button onclick="showForm('women')">Women's Fashion</button>
-  <button onclick="showForm('kids')">Kid's Fashion</button>
-  <button onclick="showForm('muslim')">Muslim's Section</button>
-  <button onclick="showForm('health_beauty')">Health & Beauty</button>
-  <button onclick="showForm('accessories')">Accessories</button>
-  <button onclick="showForm('home_kitchen')">Home & Kitchen</button>
-  <button onclick="showForm('baby_toddler')">Baby & Toddler</button>
+    <hr>
+    <p>Homepage Sections</p>
+    <button onclick="showForm('featured')">Featured</button>
+    <button onclick="showForm('fast_deal')">Fast Deal</button>
+    <button onclick="showForm('flash_sale')">Flash Sale</button>
+    <button onclick="showForm('new_arrivals')">New Arrivals</button>
+    <hr>
+    <button onclick="loadProducts()">View All Products</button>
+  </div>
 
-  <hr>
-  <p>Homepage Sections</p>
-  <button onclick="showForm('featured')">Featured</button>
-  <button onclick="showForm('fast_deal')">Fast Deal</button>
-  <button onclick="showForm('flash_sale')">Flash Sale</button>
-  <button onclick="showForm('new_arrivals')">New Arrivals</button>
-  <hr>
-  <button onclick="loadProducts()">View All Products</button>
-</div>
+  <div class="content-wrapper">
+    <div class="content" id="manager">
+      <div class="section-title"><h2>Upload Products</h2></div>
 
-<div class="content-wrapper">
-  <div class="content" id="manager">
-    <div class="section-title">
-      <h2>Upload Products</h2>
+      <!-- dynamic form goes here -->
+      <div id="form-container"></div>
+      <p id="status" style="color:green"></p>
+
+      <h2>Manage Products</h2>
+      <div class="filters">
+        <input type="text" id="searchBox" placeholder="Search by name...">
+        <select id="filterCategory">
+          <option value="">All Categories</option>
+          <option value="men">Men's Fashion</option>
+          <option value="women">Women's Fashion</option>
+          <option value="kids">Kid's Fashion</option>
+          <option value="muslim">Muslim's Section</option>
+          <option value="health_beauty">Health & Beauty</option>
+          <option value="accessories">Accessories</option>
+          <option value="home_kitchen">Home & Kitchen</option>
+          <option value="baby_toddler">Baby & Toddler</option>
+        </select>
+        <select id="filterSection">
+          <option value="">All Sections</option>
+          <option value="featured">Featured</option>
+          <option value="fast_deal">Fast Deal</option>
+          <option value="flash_sale">Flash Sale</option>
+          <option value="new_arrivals">New Arrivals</option>
+        </select>
+      </div>
+
+      <div id="product-table"></div>
+
+      <div id="pagination" style="margin-top:15px; text-align:center;">
+        <button id="prevPage">⬅ Prev</button>
+        <span id="pageInfo">Page 1</span>
+        <button id="nextPage">Next ➡</button>
+      </div>
     </div>
+  </div>
 
-    <div id="form-container">
-      <form id="productForm">
-        <input type="text" id="name" placeholder="Product Name" required><br>
-        <input type="number" id="price" placeholder="Price" required><br>
-        <textarea id="description" placeholder="Description"></textarea><br>
-        <input type="file" id="image" accept="image/*" required><br>
-        <input type="text" id="category" placeholder="Category (e.g. shoes)" required><br>
-        <button type="submit">Upload</button>
+  <!-- Edit modal -->
+  <div id="editModal" class="modal">
+    <div class="modal-content">
+      <h3>Edit product</h3>
+      <form id="editForm">
+        <label>Product Name</label>
+        <input id="editName" required />
+        <label>Price (₵)</label>
+        <input id="editPrice" type="number" required />
+        <label>Category</label>
+        <select id="editCategory" required></select>
+        <label>Section</label>
+        <select id="editSection" required></select>
+        <label>Change image (optional)</label>
+        <input id="editImage" type="file" accept="image/*" />
+        <div style="margin-top:10px">
+          <button type="submit">Save</button>
+          <button type="button" onclick="closeEdit()">Cancel</button>
+        </div>
       </form>
-      <p id="status"></p>
-    </div>
-
-    <h2>Manage Products</h2>
-    <!-- Filters -->
-    <div class="filters">
-      <input type="text" id="searchBox" placeholder="Search by name...">
-      <select id="filterCategory">
-        <option value="">All Categories</option>
-        <option value="men">Men's Fashion</option>
-        <option value="women">Women's Fashion</option>
-        <option value="kids">Kid's Fashion</option>
-        <option value="muslim">Muslim's Section</option>
-        <option value="health_beauty">Health & Beauty</option>
-        <option value="accessories">Accessories</option>
-        <option value="home_kitchen">Home & Kitchen</option>
-        <option value="baby_toddler">Baby & Toddler</option>
-      </select>
-
-      <!----SECTIONS FILTERING------>
-      <select id="filterSection">
-        <option value="">All Sections</option>
-        <option value="featured">Featured</option>
-        <option value="fast_deal">Fast Deal</option>
-        <option value="flash_sale">Flash Sale</option>
-        <option value="new_arrivals">New Arrivals</option>
-      </select>
-    </div>
-
-    <div id="product-table"></div>
-
-    <!-- Pagination -->
-    <div id="pagination" style="margin-top:15px; text-align:center;">
-      <button id="prevPage">⬅ Prev</button>
-      <span id="pageInfo">Page 1</span>
-      <button id="nextPage">Next ➡</button>
     </div>
   </div>
-</div>
 
-<!-- Edit Modal -->
-<div class="modal" id="editModal">
-  <div class="modal-content">
-    <h3>Edit Product</h3>
-    <form id="editForm">
-      <input type="text" id="editName" placeholder="Product Name" required>
-      <input type="number" id="editPrice" placeholder="Price" required>
-      <select id="editCategory">
-        <option value="">--Category--</option>
-        <option value="men">Men's Fashion</option>
-        <option value="women">Women's Fashion</option>
-        <option value="kids">Kid's Fashion</option>
-        <option value="muslim">Muslim's Section</option>
-        <option value="health_beauty">Health & Beauty</option>
-        <option value="accessories">Accessories</option>
-        <option value="home_kitchen">Home & Kitchen</option>
-        <option value="baby_toddler">Baby & Toddler</option>
-      </select>
-      <select id="editSection">
-        <option value="">--Section--</option>
-        <option value="featured">Featured</option>
-        <option value="fast_deal">Fast Deal</option>
-        <option value="flash_sale">Flash Sale</option>
-        <option value="new_arrivals">New Arrivals</option>
-      </select>
-      <input type="file" id="editImage" accept="image/*">
-      <button type="submit">Save Changes</button>
-      <button type="button" onclick="closeEdit()">Cancel</button>
-    </form>
-  </div>
-</div>
-
-<script type="module" src="admin.js"></script>
-
-<script>
-  // toggle //
-  const sidebar = document.querySelector(".sidebar");
-  const toggler = document.getElementById("toggler");
-  const manager = document.getElementById("manager");
-
-  // Toggle sidebar when button is clicked
-  toggler.addEventListener("click", function () {
-    if (sidebar.style.left === "0px") {
-      sidebar.style.left = "-500px";
-    } else {
-      sidebar.style.left = "0px";
-    }
-  });
-
-  window.addEventListener("click", function(e) {
-    if (!sidebar.contains(e.target) && (e.target) !== toggler) {
-      sidebar.style.left = "-500px";
-    }
-  })
-</script>
+  <script type="module" src="admin.js"></script>
+  <script>
+    const sidebar = document.querySelector(".sidebar");
+    const toggler = document.getElementById("toggler");
+    toggler?.addEventListener("click", ()=> {
+      sidebar.style.left = sidebar.style.left === "0px" ? "-500px" : "0px";
+    });
+    window.addEventListener("click", (e)=> {
+      if (!sidebar.contains(e.target) && e.target !== toggler) sidebar.style.left = "-500px";
+    });
+  </script>
 </body>
 </html>
